configuraçoes de segurançaa modificadas