@@ -4,9 +4,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -16,16 +17,29 @@ public class CorsConfig {
     private String allowedOrigins;
 
     @Bean
-    public CorsFilter corsFilter() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of(allowedOrigins.split(",")));
-        config.setAllowedHeaders(List.of("*"));
+
+        // Origens permitidas (lidas do application.yaml — separadas por vírgula)
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+
+        // Métodos HTTP permitidos
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
+        // Headers permitidos (todos)
+        config.setAllowedHeaders(List.of("*"));
+
+        // Headers expostos ao frontend (úteis pra paginação, etc)
         config.setExposedHeaders(List.of("Authorization", "Content-Disposition"));
+
+        // Permite envio de credenciais (cookies/Authorization header)
+        config.setAllowCredentials(true);
+
+        // Cache do preflight (1 hora)
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
+        return source;
     }
 }
